<?xml version="1.0"?>
<package format="2">

  <name>ros_tutorial_package</name>
  <version>2.2.3</version>
  <description>
      Tutorial: Example Package.
      Example of a package for running a ROS node.
  </description>

  <maintainer email="monika.roznere.gr@dartmouth.edu">Monika Roznere</maintainer>
  <author email="monika.roznere.gr@dartmouth.edu">Monika Roznere</author>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>rospkg</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>rospkg</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
